# linear_algebra

./: CMakeLists.txt  README.md
cmake/: globals.cmake  lapack_and_blas.cmake
libsrcs/: 09modLinearOperator.f90  10modMatrix.f90  11modReadableMatrix.f90  12modLinearSolver.f90  13modScalableMatrix.f90  14modBlockMatrix.f90  20modSimpleMatrix.f90  22modSparseMatrix.f90  23modDenseMatrix.f90  24modCombinedSparseMatrix.f90  26modStiffMatrix.f90  41modRankOneUpdate.f90  44modStdSparsePrec.f90  46modEigenv.f90  47modDensePreconditioner.f90  49modPreconditionerTuning.f90  55modPrecStiff.f90  57modSaddlePoint.f90  98modBackSlashSolvers.f90  CMakeLists.txt  dagmg_wrap.f90
